# nordtone-md-90

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
chats/: chat1.md
project/: .thumbnail  MD-90 App.dc.html  NORDTONE MD-90.html  export-src.html
scripts/: gen-icons.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/design-system/: tokens.css
src/design-system/components/: AppChrome.svelte  CassetteBay.svelte  HardwareButton.svelte  InsetPanel.svelte  JCard.svelte  Lcd.svelte  Led.svelte  ModalWindow.svelte  Panel.svelte  RoundButton.svelte  Screw.svelte  Segmented.svelte  ToggleSwitch.svelte  TransportStrip.svelte  VuMeter.svelte
src/design-system/themes/: charcoal.css
src/lib/: ipc.ts  mock.ts  store.ts
src/screens/: Generation.svelte  JCardScreen.svelte  Settings.svelte  Setup.svelte
